feat(availability): implement agenda management with role-based access control
- Implemented schedule management for DEV, ADMIN and STAFF
- DEV can manage all users
- ADMIN can manage only STAFF users
- STAFF can manage only their own schedule via /users/me
- Added schedule update and block creation endpoints
- Implemented default weekly schedule creation
- Applied business validations (7 days required, no overlap, time validation)
- Added hierarchy validation and permission rules